<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editprofile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:background="@color/light_white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:elevation="5dp">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_back"
                android:tint="@color/black" />

            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Edit Profile"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/image_placeholder" />

                    <ImageView
                        android:id="@+id/editfoto"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_edit" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext_background">

                    <customfonts.TextViewSFProDisplayMedium
                        android:id="@+id/countrycode"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="+62"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <View
                        android:layout_width="0.1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_toRightOf="@+id/countrycode"
                        android:background="@color/dark_gray" />

                    <customfonts.EditTextSFProDisplayRegular
                        android:id="@+id/phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@+id/countrycode"
                        android:background="@color/transparent"
                        android:hint="@string/hint_phone"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext_background">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="15dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_user"
                        android:textAlignment="center"
                        android:tint="@color/black" />

                    <View
                        android:layout_width="0.1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/dark_gray" />

                    <customfonts.EditTextSFProDisplayRegular
                        android:id="@+id/nama"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@+id/countrycode"
                        android:background="@color/transparent"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext_background">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="15dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_email"
                        android:textAlignment="center"
                        android:tint="@color/black" />

                    <View
                        android:layout_width="0.1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/dark_gray" />

                    <customfonts.EditTextSFProDisplayRegular
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@+id/countrycode"
                        android:background="@color/transparent"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext_background">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="15dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_kalender"
                        android:textAlignment="center"
                        android:tint="@color/black" />

                    <View
                        android:layout_width="0.1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/dark_gray" />

                    <customfonts.TextViewSFProDisplayRegular
                        android:id="@+id/tanggal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@+id/countrycode"
                        android:background="@color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_birthday"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="15dp" />

                </LinearLayout>

            </LinearLayout>

            <customfonts.Button_SF_Pro_Display_Medium
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_round_1"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlnotif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/red"
        android:visibility="gone">

        <customfonts.TextViewSFProDisplayRegular
            android:id="@+id/textnotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>
