<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/tools"
    android:id="@+id/homefrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:attribution_enabled="false"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_round_2"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <customfonts.Button_SF_Pro_Display_Medium
                    android:id="@+id/maks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@drawable/selector"
                    android:text="$100.00"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center">

                <customfonts.Button_SF_Pro_Display_Medium
                    android:id="@+id/onoff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@drawable/selector"
                    android:text="OFF"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center">

                <customfonts.Button_SF_Pro_Display_Medium
                    android:id="@+id/autobid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@drawable/selector"
                    android:text="Auto BID"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/backgroundheader">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp">

                <customfonts.TextViewSFProDisplayMedium
                    android:id="@+id/nighttext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Good Night"
                    android:textSize="12dp" />

                <customfonts.TextViewSFProDisplayMedium
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="balance"
                    android:textSize="12dp"
                    android:visibility="visible" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">

                <customfonts.TextViewSFProDisplayMedium
                    android:id="@+id/namapengguna"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textSize="15dp" />

                <customfonts.TextViewSFProDisplayMedium
                    android:id="@+id/balance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="Rp 10,0000"
                    android:textSize="15dp"
                    android:visibility="visible" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/topup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_topup"
                        android:tint="@color/colorgradient"/>

                    <customfonts.TextViewSFProDisplayMedium
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/topup"
                        android:textSize="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/withdraw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_withdraw"
                        android:tint="@color/colorgradient"/>

                    <customfonts.TextViewSFProDisplayMedium
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/withdraw"
                        android:textSize="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:tint="@color/colorgradient"
                        android:src="@drawable/ic_detailwallet"/>

                    <customfonts.TextViewSFProDisplayMedium
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/detail"
                        android:textSize="12dp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:id="@+id/imageheader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:background="@color/colorgradient">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/imagelogo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/whitelogo"
                android:layout_gravity="center"
                android:tint="@color/white"
                android:padding="2dp"/>
            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"/>
            <customfonts.TextViewSFProDisplayMedium
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imagelogo"/>
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/rlprogress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:elevation="10dp"
        android:visibility="gone"
        android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@color/white" />


        <ProgressBar
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/lllogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="10dp"
                android:src="@drawable/logo" />
        </LinearLayout>
    </RelativeLayout>
    </FrameLayout>


</RelativeLayout>